vlib/v/checker/tests/array_count_err.out
vlib/v/checker/tests/array_count_err.vv:3:10: error: invalid expression, expected infix expr, lambda or function
    1 | fn main() {
    2 |     a := []int{}
    3 |     a.count(1)
      |             ^
    4 |     a.count(1, 2)
    5 |     a.count('')
vlib/v/checker/tests/array_count_err.vv:4:4: error: expected 1 argument, but got 2
    2 |     a := []int{}
    3 |     a.count(1)
    4 |     a.count(1, 2)
      |       ~~~~~~~~~~~
    5 |     a.count('')
    6 |     a.count()
vlib/v/checker/tests/array_count_err.vv:5:10: error: type mismatch, should use e.g. `count(it > 2)`
    3 |     a.count(1)
    4 |     a.count(1, 2)
    5 |     a.count('')
      |             ~~
    6 |     a.count()
    7 | }
vlib/v/checker/tests/array_count_err.vv:6:4: error: expected 1 argument, but got 0
    4 |     a.count(1, 2)
    5 |     a.count('')
    6 |     a.count()
      |       ~~~~~~~
    7 | }
