vlib/v/checker/tests/array_count_err.vv
fn main() {
	a := []int{}
	a.count(1)
	a.count(1, 2)
	a.count('')
	a.count()
}
